--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -2,6 +2,11 @@ trigger:
   branches:
     include:
       - Develop
+ paths:
+    include:
+      - frontend/**   # Only trigger on changes in frontend folder
+    exclude:
+      - backend/**    # Just to be explicit, exclude backend folder if needed
 
 pool:
   vmImage: 'windows-latest'
